Implement foreground tab opening functionality
Add core functionality to open links in foreground tabs:
- Background service worker to create tabs with active: true
- Content script to intercept link clicks (Cmd/Ctrl+click, middle-click, target="_blank")
- Update manifest with required permissions and scripts
- Update documentation with feature description and usage

--- a/popup.html
+++ b/popup.html
@@ -19,7 +19,14 @@
 </head>
 <body>
   <h1>Tab Leap</h1>
-  <p>Welcome to Tab Leap!</p>
+  <p>Automatically opens links in foreground tabs.</p>
+  <h2 style="font-size: 14px; margin: 16px 0 8px 0;">How it works:</h2>
+  <ul style="margin: 0; padding-left: 20px; font-size: 13px; line-height: 1.6;">
+    <li>Cmd/Ctrl + Click on any link</li>
+    <li>Middle-click on any link</li>
+    <li>Links with target="_blank"</li>
+  </ul>
+  <p style="font-size: 12px; color: #666; margin-top: 16px;">All open in foreground instead of background.</p>
   <script src="popup.js"></script>
 </body>
 </html>
